# WakeWISE

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
WakeWISE/: __init__.py  main.py
WakeWISE/DegradationModels/: Deterministic.py  Stochastic.py  __init__.py
WakeWISE/MaintenanceModels/: DenseCosts.py  MaintenanceModel.py  SparseCosts.py  __init__.py
WakeWISE/PropagationModels/: FarmSimulation.py  PropagationModel.py  Surrogates.py  __init__.py
WakeWISE/WindSamplers/: BasicSamplers.py  DetailedSamplers.py  WindSampler.py  __init__.py
WakeWISE/WindTurbine/: IEA37.py  Turbine.py  __init__.py
WakeWISE/configs/: degradation.yaml  environment.yaml
WakeWISE/data/SpotPrices/: NordPool_MM_HH_price_matrix.npy  NordPool_MM_HH_price_matrix_SYSTEM.npy  NordPool_MM_HH_price_matrix_SYSTEM_WITH_NEG.npy
WakeWISE/data/WindFarmLayouts/: Anholt_FC_shifted.pt  HornsRev_FC_shifted.pt  KriegersFlak_FC_shifted.pt  Lillgrund_FC.pt  Lillgrund_FC_shifted.pt  Lillgrund_FC_shifted_scaled.pt  MiddelGrunden_FC_shifted.pt  Wieringermeer_FC_shifted.pt
WakeWISE/utils/: BaselinePowerSurrogate.py  ConfigLoader.py  DataLoggers.py  RateModel.py  __init__.py  globals.py  logger.py  normalizer.py  replay_logger.py  scheduler.py  spaces.py  time.py
WakeWISE/utils/PyGameUtils/: __init__.py  calculations.py  draw.py
WakeWISE/wrappers/: DebugWrapper.py  DoNothingWrapper.py  FullyObservibleWrapper.py  GradientDescentWrapper.py  GraphObservationWrapper.py  NormalisationWrapper.py  RandomiseFarmWrapper.py  RemoveBaselineWrapper.py  ScaleRewardsWrapper.py  __init__.py
(+16 files in other folders)
